# RustyCraft

./: .gitignore  Cargo.toml  README.md
assets/: cube.mtl
src/: camera.rs  chunk.rs  clock.rs  collision.rs  cube.rs  effects.rs  macros.rs  main.rs  material.rs  model.rs  persistence.rs  pipeline.rs  player.rs  state.rs  texture.rs  ui.rs  utils.rs  water.rs  world.rs
src/blocks/: block.rs  block_type.rs  mod.rs
src/pipelines/: highlight_selected.rs  main.rs  mod.rs  pipeline_manager.rs  translucent.rs  ui.rs
src/shaders/: highlight.wgsl  shader.wgsl  ui_shader.wgsl  water_shader.wgsl
src/structures/: mod.rs  tree.rs
