[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29" , features=[ "rwh_05", "rwh_06"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3.0"
bytemuck = { version = "1.14.0" , features= ["derive"] }
anyhow = "1.0.75"
tobj = { version = "3.2.1", features = ["async"]}
glam = { version = "0.24.2" , features=["bytemuck"]}
[dependencies.image]
version = "0.24.7"
default-features = false
features = ["png", "jpeg"]


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
